--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 
   <head>
     <title> "First title" </title>
-    <h1> first page </h1>
+    
   </head>
   <body>
+    <h1> first page </h1>
    Hello World
+    <img src https://avatars2.githubusercontent.com/u/70704415?v=4>
   </body>
 </html>
     
